# SimComp

./: .gitignore  CONTRIBUTING.md  README.md  test.txt  testing.md
_Console/: SimComp.mk
_Console/_src/: CMakeLists.txt  SimComp  SimComp_Console.sln  SimComp_Console.vcxproj  SimComp_Console.vcxproj.filters  config.cpp  config.h  consoleUI.cpp  consoleUI.h  dump.cpp  logg.txt  main.cpp  utils.cpp  utils.h
_GUI/SimComp_GUI/: SimComp_GUI.pro  globals.h  main.cpp  mainwindow.cpp  mainwindow.h  runwidget.cpp  runwidget.h  welcomewidget.cpp  welcomewidget.h
_GUI/_src/: SimComp_GUI.pro  SimComp_GUI.vcxproj  SimComp_GUI.vcxproj.filters  SimComp_icon.icns  dropdownwidget.cpp  dropdownwidget.h  fileviewer.cpp  fileviewer.h  globals.h  idewidget.cpp  idewidget.h  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memorymap.cpp  memorymap.h  memorywindow.cpp  memorywindow.h  memorywindowwidget.cpp  memorywindowwidget.h  performancechart.cpp  performancechart.h  runwidget.cpp  runwidget.h  styles.qrc
_GUI/_styles/: QTDark.qss  vs_dark.qss
_GUI/build-SimComp_GUI-Desktop_Qt_5_10_0_clang_64bit-Debug/: Makefile  moc_mainwindow.cpp  moc_runwidget.cpp  moc_welcomewidget.cpp  qrc_images.cpp  ui_mainwindow.h
_Guide/: build.tex  contributing.tex  download.tex  introduction.tex  main.tex  simulatorapi.tex  sourcecode.tex  troubleshooting.tex  update.tex
_Simulator/_sasm/: test1.sasm  test2.sasm
_Simulator/_src/: SimComp  a.out  compSim.h  (+12 more)
_simulator/: compSim.cpp  compSim.h  config.h  isa.cpp  isa.h  loader.h  logger.h  main.cpp  memory.cpp  memory.h  utils.cpp
(+25 files in other folders)
